fix grid gap

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -18,8 +18,6 @@
   &__items {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
-    grid-gap: 1rem;
-
   }
 
   &__top {
